調整樣式、檔案分類

--- a/app/index.html
+++ b/app/index.html
@@ -14,17 +14,17 @@ current: index
     <div class="col-lg-10 position-menu">
       <ul class="row list-unstyled text-center mb-0">
         <li class="col-4 border border-light menu-item active background-img-1 bg-cover backdrop-filter">
-          <a href="#">
+          <a href="products.html">
             <span class="text-vertical">本日精選</span>
           </a>
         </li>
         <li class="col-4 border border-light menu-item background-img-2 bg-cover backdrop-filter">
-          <a href="#">
+          <a href="products.html">
             <span class="text-vertical">人氣推薦</span>
           </a>
         </li>
         <li class="col-4 border border-light menu-item background-img-3 bg-cover backdrop-filter">
-          <a href="#">
+          <a href="products.html">
             <span class="text-vertical">新品上市</span>
           </a>
         </li>
@@ -102,7 +102,7 @@ current: index
   </ul>
 </div>
 
-<div class="container d-flex justify-content-center align-items-center py-3 py-md-5">
+<div class="container py-3 py-md-5">
   <h2 class="text-center text-md-vertical text-hide bg-title-3 bg-contain">
     收藏好錶—— 
     <br>
