修改頁面內容

--- a/app/checkout-receipt.html
+++ b/app/checkout-receipt.html
@@ -72,13 +72,13 @@ current: checkout-receipt
         <h2 class="text-center py-3 mb-4 bg-light">訂單摘要</h2>
         <dl class="row fw-light mb-md-0 px-3">
           <dt class="col-6 fw-light">小計</dt>
-          <dd class="col-6 text-end">$2700</dd>
+          <dd class="col-6 text-end">$ 9564</dd>
         
           <dt class="col-6 fw-light">運費</dt>
-          <dd class="col-6 text-end">$300</dd>
+          <dd class="col-6 text-end">$ 60</dd>
         
           <dt class="col-6 fw-semibold fs-4">總計</dt>
-          <dd class="col-6 fw-semibold text-end fs-4">$3000</dd>
+          <dd class="col-6 fw-semibold text-end fs-4">$ 9624</dd>
         </dl>
       </div>
       <div class="text-info">
@@ -87,34 +87,34 @@ current: checkout-receipt
           <li class="row align-items-center mb-3">
             <div class="col-5">
               <div class="ratio ratio-4x3">
-                <img src="./assets/images/cart-1.jpg" alt="makaron" class="object-fit-cover">
+                <img src="./assets/images/louis-mornaud-ADvixEYm5qE-unsplash.jpg" alt="靜謐藍優雅手錶" class="object-fit-cover">
               </div>
             </div>
             <div class="col-7">
-              <h3 class="fs-6">焦糖馬卡龍（2）</h3>
-              <p class="fs-4 fw-semibold">NT$900</p>
+              <h3 class="fs-6">靜謐藍優雅手錶（2）</h3>
+              <p class="fs-4 fw-semibold">NT$ 3276</p>
             </div>
           </li>
           <li class="row align-items-center mb-3">
             <div class="col-5">
               <div class="ratio ratio-4x3">
-                <img src="./assets/images/cart-1.jpg" alt="makaron" class="object-fit-cover">
+                <img src="./assets/images/bruno-van-der-kraan-VRERJ5Mjp4c-unsplash.jpg" alt="多功能三眼機械手錶" class="object-fit-cover">
               </div>
             </div>
             <div class="col-7">
-              <h3 class="fs-6">焦糖馬卡龍（2）</h3>
-              <p class="fs-4 fw-semibold">NT$900</p>
+              <h3 class="fs-6">多功能三眼機械手錶（1）</h3>
+              <p class="fs-4 fw-semibold">NT$ 3290</p>
             </div>
           </li>
           <li class="row align-items-center mb-3">
             <div class="col-5">
               <div class="ratio ratio-4x3">
-                <img src="./assets/images/cart-1.jpg" alt="makaron" class="object-fit-cover">
+                <img src="./assets/images/mambawatches-ukJdqKqFcDA-unsplash.jpg" alt="木紋金屬腕錶" class="object-fit-cover">
               </div>
             </div>
             <div class="col-7">
-              <h3 class="fs-6">焦糖馬卡龍（2）</h3>
-              <p class="fs-4 fw-semibold">NT$900</p>
+              <h3 class="fs-6">木紋金屬腕錶（1）</h3>
+              <p class="fs-4 fw-semibold">NT$ 2998</p>
             </div>
           </li>
         </ul>
